<resources>
    <string name="app_name">Cognito Identity</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">This APP is used to Send the Colume Attribute details into the Database.</string>
    <string name="more_info">For any help from Admin, User can contact us on 01639852502 </string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_Stree">Street</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string-array name="suggestion">
        <item>Aber Station</item>
        <item>Abercynon Station</item>
        <item>Aberdare Station</item>
        <item>Aberdovey Station</item>
        <item>Cardiff Central Station</item>
        <item>Cardiff </item>
        <item>Coryton Station</item>
        <item>Corytorn</item>
        <item>Rhiwbina Station</item>
        <item>Swansea</item>
        <item>Swansea Station</item>
        <item>Landaff</item>
    </string-array>

    <string-array name="column_manufacturer">
        <item>Abacus</item>
        <item>ALC/Nedal</item>
        <item>British Steel</item>
        <item>CU Phosco</item>
        <item>Fabrikat</item>
        <item>Mallatite</item>
        <item>Petitjean</item>
        <item>Rosa</item>
        <item>Sapa/Hydro</item>
        <item>Stainton</item>
        <item>Valmont/Stainton</item>
    </string-array>
    <string name="column_manufacturer">Select a planet</string>

    <string-array name="column_manufacturer1">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="column_manufacturer1">Select planet</string>

    <string-array name="column_manufacturer2">
        <item>Aluminium</item>
        <item>Concrete</item>
        <item>Plastic/Composite</item>
        <item>Stainless Steel</item>
        <item>Steel</item>

    </string-array>
    <string name="column_manufacturer2">Select a planet1</string>

    <string-array name="column_manufacturer3">
        <item>Octagonal</item>
        <item>Other</item>
        <item>Paralell</item>
        <item>Stepped</item>
        <item>Tapered</item>

    </string-array>
    <string name="column_manufacturer3">Select a planet</string>


    <string-array name="column_manufacturer4">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>

    </string-array>
    <string name="column_manufacturer4">Select a planet</string>


    <string-array name="column_manufacturer5">
        <item>1</item>
        <item>2</item>

    </string-array>
    <string name="column_manufacturer5">Select a planet</string>


    <string-array name="column_manufacturer6">
        <item>500x100</item>
        <item>600x100</item>
        <item>600x115</item>


    </string-array>
    <string name="column_manufacturer6">Select a planet</string>


    <string-array name="column_manufacturer7">
        <item>Flange Plate</item>
        <item>NAL Socket</item>
        <item>Root Mounted</item>
        <item>CU Phosco</item>

    </string-array>
    <string name="column_manufacturer7">Select a planet</string>

    <string-array name="column_manufacturer8">
        <item>Dual</item>
        <item>Post top</item>
        <item>Single</item>
        <item>Triple</item>

    </string-array>
    <string name="column_manufacturer8">Select a planet</string>

    <string-array name="column_manufacturer9">
        <item>0</item>
        <item>0.5m</item>
        <item>1.0m</item>
        <item>1.5m</item>
        <item> less 0.5m </item>
        <item> greater 0.5m</item>

    </string-array>
    <string name="column_manufacturer9">Select a planet</string>


    <string-array name="column_manufacturer10">
        <item>less 5 years</item>
        <item>5-10 years</item>
        <item>10-15 years</item>
        <item>15-20 years</item>
        <item>greater 20 years</item>

    </string-array>
    <string name="column_manufacturer10">Select a planet</string>

    <string-array name="column_manufacturer11">
        <item>Abacus</item>
        <item>ASD</item>
        <item>Candella</item>
        <item>Carbon2 reduction</item>
        <item>Cree</item>
        <item>DW Windsor</item>
        <item>GE Lighting</item>
        <item>Candella</item>
        <item>Gemma</item>
        <item>Holophane</item>
        <item>IGuzzini</item>
        <item>Indo</item>
        <item>Kingfisher</item>
        <item>LED Roadway</item>
        <item>Louis Poulsen</item>
        <item>Orangetek</item>
        <item>Philips</item>
        <item>Siteco</item>
        <item>Tamlite</item>
        <item>Thoriux</item>
        <item>TRT Lighting</item>
        <item>Urbis Schreder</item>
        <item>Whitecroft</item>
        <item>other</item>


    </string-array>
    <string name="column_manufacturer11">Select a planet</string>
    <string name="title_activity_splash">splashActivity</string>


    <style name="Widget" />

    <style name="Widget.TextInputLayout">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">@dimen/input_width</item>
        <item name="android:textColorHint">@color/color_input_hint</item>
    </style>

    <style name="Widget.TextEdit">
        <item name="android:layout_height">match_parent</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:textColorHighlight">@color/color_text_highlight</item>
        <item name="android:textStyle">bold</item>
        <item name="android:textColorHint">@color/color_input_hint</item>
        <item name="android:background">@drawable/input_state</item>
        <item name="android:textColor">@color/color_text</item>
        <item name="android:padding">@dimen/text_padding</item>
    </style>

    <style name="Widget.Hint">
        <item name="android:textSize">17sp</item>
        <item name="android:textColor">@color/color_text</item>
        <item name="android:textStyle">bold</item>
    </style>


    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>

    <string name="sign_up_or_label"> Sign Up </string>
    <string name="log_in_or_label"> Log In </string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>

    <string name="or"> Or </string>
    <string name="title_activity_email">emailActivity</string>
</resources>
